--- a/argo-apps/app-3.yaml
+++ b/argo-apps/app-3.yaml
@@ -7,7 +7,7 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec: 
   destination: 
-    namespace: argocd-
+    namespace: argo-app-3
     server: "https://kubernetes.default.svc"
   project: default
   source: 
