--- a/argo-apps/app-5.yaml
+++ b/argo-apps/app-5.yaml
@@ -12,5 +12,11 @@ spec:
   project: default
   source: 
     path: my-apps/app-5
-    repoURL: "https://github.com/iamsamitdev/argocd-app-of-apps.git"
+    repoURL: "https://github.com/papadat/argocd-app-of-apps.git"
     targetRevision: main
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+    - CreateNamespace=true
