--- a/argo-apps/app-1.yaml
+++ b/argo-apps/app-1.yaml
@@ -13,4 +13,4 @@ spec:
   source: 
     path: my-apps/app-1
     repoURL: "https://github.com/papadat/argocd-app-of-apps.git"
-    targetRevision: main
+    targetRevision: HEAD
