--- a/argo-apps/app-5.yaml
+++ b/argo-apps/app-5.yaml
@@ -13,7 +13,7 @@ spec:
   source: 
     path: my-apps/app-5
     repoURL: "https://github.com/papadat/argocd-app-of-apps.git"
-    targetRevision: main
+    targetRevision: HEAD
   syncPolicy:
     automated:
       prune: true
