--- a/my-apps/app-1/app.yaml
+++ b/my-apps/app-1/app.yaml
@@ -21,6 +21,9 @@ spec:
         ports:
         - containerPort: 80
         resources:
+          requests:
+            memory: "10Mi"
+            cpu: "100m"
           limits:
             memory: "10Mi"
             cpu: "100m"
